assets/scss/layouts/_pages.scss
.docs-content > h2[id]::before,
.docs-content > h3[id]::before,
.docs-content > h4[id]::before {
  display: block;
  height: 6rem;
  margin-top: -6rem;
  content: "";
}

.anchor {
  visibility: hidden;
}

h1:hover a,
h2:hover a,
h3:hover a,
h4:hover a {
  visibility: visible;
  text-decoration: none;
}

.card-list {
  margin-top: 2.25rem;
}

.page-footer-meta {
  margin-top: 3rem;
}

.edit-page,
.last-modified {
  font-size: $font-size-sm;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
}

@include media-breakpoint-up(md) {
  .edit-page,
  .last-modified {
    font-size: $font-size-base;
    margin-top: 0.75rem;
    margin-bottom: 0.25rem;
  }
}

.edit-page svg,
.last-modified svg {
  margin-right: 0.25rem;
  margin-bottom: 0.25rem;
}

p.meta {
  margin-top: 0.5rem;
  font-size: $font-size-base;
}

.breadcrumb {
  margin-top: 2.25rem;
  font-size: $font-size-base;
}

.page-link:hover {
  text-decoration: none;
}

.home {
  .fold {
    position: relative;
    background-image: url("/images/IPNI_Header_large.png");
    background-size: cover;
    background-repeat: no-repeat;
    &:after {
      content: '';
      display: block;
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      background-color: #1d2d35;
      opacity: 0.6;
      z-index: 3;
    }
    .heading, .subheading {
      position: relative;
      z-index: 10;
      color: white;
    }
    .heading {
      padding: 10rem 0 3rem;
      font-size: 6rem;
      @media only screen and (max-width: 480px){
        font-size: 4rem;
      }
    }
  }
  .why-ipni {
    background-color: #fbf7f0;
    color: #1d2d35;
    .content {
      padding-top: 6rem;
    }
    h2 {
      opacity: 0.8;
    }
    a {
      color: #5d2f86;
    }
  }
  .partners {
    background-color: #C5E6F1;
    color: #1d2d35;
    padding: 5rem 0;
    .section-heading {
      font-size: 2.5rem;
      font-weight: 400;
      text-transform: uppercase;
      padding-bottom: 2rem;
    }
    .row {
      padding-bottom: 2rem;
      @media only screen and (max-width: 767px){
        padding-bottom: 0;
      }
    }
  }

  .features {
    background-color: #ffffff;
    color: #1d2d35;
    padding: 5rem 0;
    .section-heading {
      font-size: 2.5rem;
      font-weight: 400;
      text-transform: uppercase;
      padding-bottom: 2rem;
    }
    .row {
      padding-bottom: 2rem;
      @media only screen and (max-width: 767px){
        padding-bottom: 0;
      }
    }
  }

  .media_new {
    padding-left: 5rem;
    padding-right: 5rem;
    padding-bottom: 0.05rem;
    .section-heading {
      font-size: 2.5rem;
      font-weight: 400;
      text-transform: uppercase;
      padding-bottom: 2rem;
    }
    .row {
      padding-bottom: 2rem;
    }
  }

  .media {
    position: relative;
    background-color: #fbf7f0;
    color: #1d2d35;
    padding: 7rem 2rem;
    overflow: hidden;
    .section-heading {
      font-size: 4rem;
    }
    .main-video {
      p {
        width: 80%;
      }
    }
    .content {
      position: relative;
      z-index: 10;
    }
    .image-container-1,.image-container-2, .image-container-3 {
      position: absolute;
      z-index: 4;
    }
    .image-container-1 {
      top: -6rem;
      left: 10rem;
      width: 27rem;
      height: auto;
      transform: rotate(200deg);
    }
    .image-container-2 {
      top: -4rem;
      right: 0;
      width: 16rem;
      height: auto;
      transform: rotate(45deg);
    }
    .image-container-3 {
      bottom: -5rem;
      left: 45%;
      width: 30rem;
      height: auto;
      transform: rotate(25deg);
    }
  }
}

.ipni-gray {
  color: #5A626E;
}

.ipni-light-gray {
  color: #97A1AF;
}

.f-30 {
  font-size: 30px;
}

.f-18 {
  font-size: 18px;
}

